--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "cli": "node ./src/cli.js ./files"
   },
   "keywords": [],
   "author": "Júlia Fernandes Alves <juliafealves@gmail.com> (https://github.com/juliafealves)",
